--- a/Love Calculator/style.css
+++ b/Love Calculator/style.css
@@ -8,19 +8,27 @@ html, body {
     font-size: 62.5%;
 }
 body {
-    background-color: #fffaf0;
     font-family: 'Arial', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    min-height: 180svh;
     background-image: linear-gradient(to right, #ff9a9e, #fad0c4);
+}
+#particles-js {
+    z-index: -1;
+    width: 100%;
+    height: 150svh;
 }
 
 
 .card {
     display: flex;
+    position: absolute;
     flex-direction: column;
-    margin: 5rem 0 5rem 0;
+    margin: auto 0;
+    top: 30%;
     align-items: center;
     /* Center items vertically in the card */
     border: .3em solid #ff6b6b;
@@ -28,11 +36,10 @@ body {
     border-radius: 2rem;
     padding: 3rem;
     width: 80%;
-    min-height: 20rem;
-    height: 100%;
-    /* height: auto; */
+    min-height: 30rem;
+    height: fit-content;
     /* Automatic height */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 25px 35px rgb(0 0 0);
     /* Subtle shadow for depth */
     background: #ff6a6a;
     /* Card background color */
@@ -122,6 +129,9 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
+    #particle-js{
+        height: 250svh;
+    }
     .card {
         width: 90%;
         /* More width on smaller screens */
@@ -158,4 +168,12 @@ body {
     #result {
         font-size: 1.4rem;
     }
+}
+
+#ghost-box {
+    width: 100%;
+    height: 5rem;
+    background: transparent;
+    user-select: none;
+    content: '';
 }
