--- a/Games/Tic-Tac-Toe/global.css
+++ b/Games/Tic-Tac-Toe/global.css
@@ -146,6 +146,7 @@ section {
     text-align: center;
     font-size: 3rem;
     text-transform: uppercase;
+    color: var(--snow-white);
 }
 
 .CoinTossContainer>.container {
@@ -179,8 +180,16 @@ section {
 }
 
 @media (max-width: 426px) {
+    .CoinTossContainer {
+        width: 80%;
+        height: 90svh;
+        top: 70%;
+        left: 50%;
+    }
     .result>p {
         font-size: 2rem;
+        margin-bottom: 7rem;
+        margin-top: 7rem;
     }
 
     #choiceBtn {
@@ -585,23 +594,26 @@ footer {
 
 @media (max-width: 430px) {
     html {
-        width: 500px;
+        width: 430px;
     }
     header>nav {
-        height: 4rem;
-        width: 50%;
+        height: 10rem;
+        width: 70%;
     }
 
     header>nav>ul>li>a {
-        font-size: 1rem;
+        font-size: 2rem;
         padding: 0;
     }
 
     header>nav>ul>li>a:hover {
-        font-size: 1.5rem;
+        font-size: 2.5rem;
         background-color: transparent;
     }
     footer {
         margin-top: 34rem;
+    }
+    #game-heading {
+        font-size: 2rem;
     }
 }
